# site-edit-2

./: .dockerignore  .gitignore  .gitmodules  .pylintrc  Dockerfile  README.md  dictionary.md  docker-compose-pycharm.yml  docker-compose.yml  docker-entrypoint-unittest.sh  docker-entrypoint.sh  env.example  manage.py  playgroundxx.py  pyproject.toml  pytest.ini  qodana.yaml  requirements.txt
_bak/: models.py.20220518.bak
audit/: apps.py  audit_migrations_utils.py  audit_recref_adapter.py  forms.py  model_signals.py  models.py  urls.py  views.py
catalogue/: forms.py  urls.py  utils.py  views.py
clonefinder/: apps.py  models.py  tests.py  urls.py  views.py
core/: apps.py  constant.py  context_processors.py  exporter.py  fixtures.py  form_label_maps.py  forms.py  lang_forms.py  lang_urls.py  lang_views.py  misc_urls.py  misc_views.py  models.py  recref_settings.py  tests.py  user_forms.py  user_urls.py  user_views.py  views.py
devscript/: init-deploy-emlo.sh  link_manual_migrations.sh  sync_db.221220.sql  sync_db.230615.sql  sync_db_tool.py  sync_script1.sql
docs/: deployment_procedure.md  dev.md  running_site-edit-2_using_docker.md
emlotheme/: apps.py
institution/: fixtures.py  forms.py  inst_utils.py  institution_suggestion.py  institution_suggestion_fields.py  models-bak.py  models.py  models.py.bak  recref_adapter.py  tests.py  urls.py  view_components.py  views.py
list/: apps.py  urls.py  views.py
location/: fixtures.py  forms.py  location_serv.py  location_suggestion.py  location_suggestion_fields.py  location_utils.py  models.py  models.py.bak  queries.py  recref_adapter.py  renderer.py  tests.py  urls.py  view_components.py  views.py
login/: admin.py  fixtures.py  forms-bak.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
lookups/: urls.py  views.py
manifestation/: apps.py  fixtures.py  manif_serv.py  manif_utils.py  models.py  models.py.bak  tests.py  urls.py  views.py
person/: fixtures.py  forms.py  models.py  models.py.bak  person_serv.py  person_suggestion.py  person_suggestion_fields.py  person_utils.py  queries.py  recref_adapter.py  subqueries.py  tests.py  urls.py  (+2 more)
(+714 files in other folders)
